fix: expose result narrative fields